# api.yaml
@@ -36,7 +36,7 @@ paths:
         "405":
           description: Invalid input
       security:
-        - songvoter_auth: ["read:song"]
+        - jwt: []
   /songs/search:
     get:
       tags:
@@ -62,7 +62,7 @@ paths:
         "400":
           description: Invalid search term
       security:
-        - jwt: ["read:song"]
+        - jwt: []
   "/song/{songId}":
     get:
       tags:
@@ -76,8 +76,7 @@ paths:
           description: ID of song to return
           required: true
           schema:
-            type: integer
-            format: int64
+            type: string
       responses:
         "200":
           description: successful operation
@@ -90,7 +89,7 @@ paths:
         "404":
           description: Song not found
       security:
-        - songvoter_auth: ["read:song"]
+        - jwt: []
   /lists:
     post:
       tags:
@@ -111,6 +110,8 @@ paths:
             "*/*":
               schema:
                 $ref: "#/components/schemas/PlayList"
+      security:
+        - jwt: []
     get:
       tags:
         - list
@@ -125,7 +126,9 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/PlayList"
-  "/lists/{listId}":
+      security:
+        - jwt: []
+  /lists/{listId}:
     get:
       tags:
         - list
@@ -138,8 +141,7 @@ paths:
           description: ID of list to return
           required: true
           schema:
-            type: integer
-            format: int64
+            type: string
       responses:
         "200":
           description: successful operation
@@ -147,6 +149,8 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/PlayList"
+      security:
+        - jwt: []
   /auth/google:
     post:
       tags:
@@ -181,6 +185,8 @@ paths:
             "*/*":
               schema:
                 $ref: "#/components/schemas/Party"
+      security:
+        - jwt: []
     get:
       tags:
         - party
@@ -195,7 +201,9 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/Party"
-  "/party/{partyId}/join":
+      security:
+        - jwt: []
+  /party/{partyId}/join:
     post:
       tags:
         - party
@@ -211,6 +219,8 @@ paths:
       responses:
         "201":
           description: joined successfully
+      security:
+        - jwt: []
   "/party/{partyId}/leave":
     post:
       tags:
@@ -227,6 +237,8 @@ paths:
       responses:
         "201":
           description: left successfully
+      security:
+        - jwt: []
   "/party/{partyId}/kick/{userId}":
     post:
       tags:
@@ -249,6 +261,8 @@ paths:
       responses:
         "201":
           description: left successfully
+      security:
+        - jwt: []
   "/party/{partyId}/invite/{userId}":
     post:
       tags:
@@ -271,6 +285,8 @@ paths:
       responses:
         "201":
           description: invite sent
+      security:
+        - jwt: []
   "/party/{partyId}/inviteLink":
     get:
       tags:
@@ -287,6 +303,8 @@ paths:
       responses:
         "200":
           description: invite created
+      security:
+        - jwt: []
   "/party/{partyId}/nextSong":
     get:
       tags:
@@ -307,6 +325,8 @@ paths:
             "*/*":
               schema:
                 $ref: "#/components/schemas/Song"
+      security:
+        - jwt: []
   "/party/{partyId}/reset":
     post:
       tags:
@@ -323,6 +343,8 @@ paths:
       responses:
         "200":
           description: reset party
+      security:
+        - jwt: []
   "/party/{partyId}/upvote/{songId}":
     post:
       tags:
@@ -343,10 +365,12 @@ paths:
           description: ID of the song to upvote
           required: true
           schema:
-            type: integer
+            type: string
       responses:
         "200":
           description: upvoted
+      security:
+        - jwt: []
   "/party/{partyId}/downvote/{songId}":
     post:
       tags:
@@ -365,10 +389,12 @@ paths:
           description: ID of the song
           required: true
           schema:
-            type: integer
+            type: string
       responses:
         "200":
           description: downvote accepted
+      security:
+        - jwt: []
 externalDocs:
   description: Find out more about Swagger
   url: http://swagger.io
@@ -376,14 +402,6 @@ servers:
   - url: https://songvoter.coflnet.com/v1
 components:
   securitySchemes:
-    songvoter_auth:
-      type: oauth2
-      flows:
-        implicit:
-          authorizationUrl: https://songvoter.coflnet.com/oauth/dialog
-          scopes:
-            write:song: modify songs
-            read:song: "read songs "
     jwt:
       type: http
       scheme: bearer
@@ -395,9 +413,6 @@ components:
         - externalId
         - platform
       properties:
-        id:
-          type: integer
-          format: int64
         title:
           type: string
           example: Lady Gaga - Poker Face (Official Music Video)
@@ -424,8 +439,7 @@ components:
         - song
       properties:
         id:
-          type: integer
-          format: int64
+          type: string
         title:
           type: string
           example: Lady Gaga - Poker Face (Official Music Video)
@@ -449,15 +463,15 @@ components:
       type: object
       properties:
         id:
-          type: integer
-          example: 43873
+          type: string
+          example: dfINx
         title:
           type: string
           example: My playlist
         songs:
           type: array
           items:
-            type: integer
+            type: string
     AuthToken:
       type: object
       properties:
@@ -477,7 +491,7 @@ components:
           type: array
           items:
             description: userIds
-            type: integer
+            type: string
     ApiResponse:
       type: object
       properties:
